# ciic_ros_tasks

./: README.md
ciic_ros_tasks/: package.xml  setup.cfg  setup.py
ciic_ros_tasks/ciic_ros_tasks/: task_car_performer.py  task_car_teleop.py  tasks_booker.py  teste.py
ciic_ros_tasks/config/: params_task_car.yaml
ciic_ros_tasks/launch/: task_car_teleop.launch.py
