<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ciic_ros_tasks</name>
  <version>0.0.0</version>
  <description>Car controller for the car control task</description>
  <maintainer email="bruno.c.rocha@ipleiria.pt">Bruno Rocha</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ciic_ros_tasks_messages</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
